Added default ladder sound

--- a/pf-packs/pf_presence/blockmap.cfg
+++ b/pf-packs/pf_presence/blockmap.cfg
@@ -109,7 +109,8 @@
 62=stonemachine
 63=NOT_EMITTER
 64=bluntwood
-#65=ladder #DISABLED: Use default ladder sound
+#65=ladder #DISABLED: Use default (re-scripted) ladder sound
+65=ladder_default
 66=NOT_EMITTER
 66.foliage=rails
 67=stone
