Various acoustic and blockmap changes
- Changed glowstone acoustics to a mix of ice crackling and stone
- Changed pumpkin and jack-o-lantern acoustics to a mix of solid grass and mud
- Changed grass acoustics to a mix of solid grass and bush
- Changed Nether Wart foliage to produce a mix of dirt and mud
- Changed brush volume to 65

--- a/pf-packs/pf_presence/blockmap.cfg
+++ b/pf-packs/pf_presence/blockmap.cfg
@@ -136,12 +136,12 @@
 83.foliage=straw
 84=woodutility
 85=bluntwood
-86=organic
+86=organic_solid
 87=stone
 88=quicksand
-89=glass
+89=glowstone
 90=NOT_EMITTER
-91=organic
+91=organic_solid
 92=organic
 93=stoneutility
 94=stoneutility
@@ -170,6 +170,7 @@
 113=brickstone
 114=brickstone
 115=NOT_EMITTER
+115.foliage=organic
 116=stoneutility
 117=metalbar
 118=metalbar
