Replaced _ with ^ and added new blocks in their literal form

--- a/pf-packs/pf_presence/blockmap.cfg
+++ b/pf-packs/pf_presence/blockmap.cfg
@@ -31,18 +31,18 @@
 28=NOT_EMITTER
 28.foliage=rails
 29=stonemachine
-29_1=wood_sticky
+29^1=wood_sticky
 30=NOT_EMITTER
 31=NOT_EMITTER
-31_0.foliage=straw
-31_1.foliage=brush
-31_2.foliage=brush
+31^0.foliage=straw
+31^1.foliage=brush
+31^2.foliage=brush
 32=NOT_EMITTER
 32.foliage=straw
 33=stonemachine
-33_1=wood
+33^1=wood
 34=wood
-34_9=wood_sticky
+34^9=wood_sticky
 35=rug
 36=NOT_EMITTER
 37=NOT_EMITTER
@@ -52,34 +52,34 @@
 41=hardmetal
 42=hardmetal
 43=stone
-43_0=stone
-43_1=sandstone
-43_2=wood
-43_3=stone
-43_4=brickstone
-43_5=brickstone
-43_6=brickstone
-43_7=marble
-43_8=stone
-43_9=sandstone
-43_15=marble
+43^0=stone
+43^1=sandstone
+43^2=wood
+43^3=stone
+43^4=brickstone
+43^5=brickstone
+43^6=brickstone
+43^7=marble
+43^8=stone
+43^9=sandstone
+43^15=marble
 44=stone
-44_0=stone
-44_1=sandstone
-44_2=wood
-44_3=stone
-44_4=brickstone
-44_5=brickstone
-44_6=brickstone
-44_7=marble
-44_8=stone
-44_9=sandstone
-44_10=wood
-44_11=stone
-44_12=brickstone
-44_13=brickstone
-44_14=brickstone
-44_15=marble
+44^0=stone
+44^1=sandstone
+44^2=wood
+44^3=stone
+44^4=brickstone
+44^5=brickstone
+44^6=brickstone
+44^7=marble
+44^8=stone
+44^9=sandstone
+44^10=wood
+44^11=stone
+44^12=brickstone
+44^13=brickstone
+44^14=brickstone
+44^15=marble
 45=brickstone
 46=equipment
 47=wood
@@ -96,14 +96,14 @@
 57=composite
 58=wood
 59=NOT_EMITTER
-59_0.foliage=NOT_EMITTER
-59_1.foliage=NOT_EMITTER
-59_2.foliage=brush
-59_3.foliage=brush
-59_4.foliage=brush_straw_transition
-59_5.foliage=brush_straw_transition
-59_6.foliage=straw
-59_7.foliage=straw
+59^0.foliage=NOT_EMITTER
+59^1.foliage=NOT_EMITTER
+59^2.foliage=brush
+59^3.foliage=brush
+59^4.foliage=brush_straw_transition
+59^5.foliage=brush_straw_transition
+59^6.foliage=straw
+59^7.foliage=straw
 60=dirt
 61=stonemachine
 62=stonemachine
@@ -145,11 +145,11 @@
 92=organic
 93=stoneutility
 94=stoneutility
-95=squeakywood
+minecraft>stained_glass=glass
 96=bluntwood
-97_0=stone
-97_1=stone
-97_2=brickstone
+97^0=stone
+97^1=stone
+97^2=brickstone
 98=brickstone
 99=organic
 100=organic
@@ -197,23 +197,23 @@
 139=stone
 140=brickstone
 141=NOT_EMITTER
-141_0.foliage=NOT_EMITTER
-141_1.foliage=NOT_EMITTER
-141_2.foliage=NOT_EMITTER
-141_3.foliage=NOT_EMITTER
-141_4.foliage=brush
-141_5.foliage=brush
-141_6.foliage=brush
-141_7.foliage=brush
+141^0.foliage=NOT_EMITTER
+141^1.foliage=NOT_EMITTER
+141^2.foliage=NOT_EMITTER
+141^3.foliage=NOT_EMITTER
+141^4.foliage=brush
+141^5.foliage=brush
+141^6.foliage=brush
+141^7.foliage=brush
 142=NOT_EMITTER
-142_0.foliage=NOT_EMITTER
-142_1.foliage=NOT_EMITTER
-142_2.foliage=NOT_EMITTER
-142_3.foliage=NOT_EMITTER
-142_4.foliage=brush
-142_5.foliage=brush
-142_6.foliage=brush
-142_7.foliage=brush
+142^0.foliage=NOT_EMITTER
+142^1.foliage=NOT_EMITTER
+142^2.foliage=NOT_EMITTER
+142^3.foliage=NOT_EMITTER
+142^4.foliage=brush
+142^5.foliage=brush
+142^6.foliage=brush
+142^7.foliage=brush
 143=NOT_EMITTER
 144=organic
 145=metalcompressed,hardmetal
@@ -234,8 +234,20 @@
 157.foliage=rails
 158=stonemachine
 159=brickstone
+minecraft>stained_glass_pane=glass
+minecraft>leaves2=wood
+minecraft>acacia_stairs=leaves
+minecraft>dark_oak_stairs=wood
 170=leaves
 171=rug
 171.carpet=rug
 172=brickstone
 173=stone
+minecraft>packed_ice=ice
+minecraft>double_plant=NOT_EMITTER
+minecraft>double_plant^0.foliage=brush
+minecraft>double_plant^1.foliage=brush_straw_transition
+minecraft>double_plant^2.foliage=brush
+minecraft>double_plant^3.foliage=brush_straw_transition
+minecraft>double_plant^4.foliage=brush_straw_transition
+minecraft>double_plant^5.foliage=brush_straw_transition
