Added messy foliage, stone slabs are now brickstone, tweaked double plants

--- a/pf-packs/pf_presence/blockmap.cfg
+++ b/pf-packs/pf_presence/blockmap.cfg
@@ -5,6 +5,7 @@
 4=stone
 5=wood
 6=NOT_EMITTER
+6.messy=MESSY_GROUND
 6.foliage=straw
 7=bedrock
 8=NOT_EMITTER
@@ -34,9 +35,11 @@
 29^1=wood_sticky
 30=NOT_EMITTER
 31=NOT_EMITTER
+31.messy=MESSY_GROUND
 31^0.foliage=straw
 31^1.foliage=brush
 31^2.foliage=brush
+32.messy=MESSY_GROUND
 32=NOT_EMITTER
 32.foliage=straw
 33=stonemachine
@@ -52,7 +55,7 @@
 41=hardmetal
 42=hardmetal
 43=stone
-43^0=stone
+43^0=brickstone
 43^1=sandstone
 43^2=wood
 43^3=stone
@@ -60,11 +63,11 @@
 43^5=brickstone
 43^6=brickstone
 43^7=marble
-43^8=stone
+43^8=brickstone
 43^9=sandstone
 43^15=marble
 44=stone
-44^0=stone
+44^0=brickstone
 44^1=sandstone
 44^2=wood
 44^3=stone
@@ -72,7 +75,7 @@
 44^5=brickstone
 44^6=brickstone
 44^7=marble
-44^8=stone
+44^8=brickstone
 44^9=sandstone
 44^10=wood
 44^11=stone
@@ -96,6 +99,7 @@
 57=composite
 58=wood
 59=NOT_EMITTER
+59.messy=MESSY_GROUND
 59^0.foliage=NOT_EMITTER
 59^1.foliage=NOT_EMITTER
 59^2.foliage=brush
@@ -133,6 +137,7 @@
 81=grass
 82=sandstone
 83=NOT_EMITTER
+83.messy=MESSY_GROUND
 83.foliage=straw
 84=woodutility
 85=bluntwood
@@ -197,6 +202,7 @@ minecraft>stained_glass=glass
 139=stone
 140=brickstone
 141=NOT_EMITTER
+141.messy=MESSY_GROUND
 141^0.foliage=NOT_EMITTER
 141^1.foliage=NOT_EMITTER
 141^2.foliage=NOT_EMITTER
@@ -206,6 +212,7 @@ minecraft>stained_glass=glass
 141^6.foliage=brush
 141^7.foliage=brush
 142=NOT_EMITTER
+142.messy=MESSY_GROUND
 142^0.foliage=NOT_EMITTER
 142^1.foliage=NOT_EMITTER
 142^2.foliage=NOT_EMITTER
@@ -245,9 +252,18 @@ minecraft>dark_oak_stairs=wood
 173=stone
 minecraft>packed_ice=ice
 minecraft>double_plant=NOT_EMITTER
+minecraft>double_plant.messy=MESSY_GROUND
 minecraft>double_plant^0.foliage=brush
 minecraft>double_plant^1.foliage=brush_straw_transition
 minecraft>double_plant^2.foliage=brush
 minecraft>double_plant^3.foliage=brush_straw_transition
 minecraft>double_plant^4.foliage=brush_straw_transition
 minecraft>double_plant^5.foliage=brush_straw_transition
+minecraft>double_plant^8.foliage=brush
+minecraft>double_plant^9.foliage=brush
+minecraft>double_plant^10.foliage=brush
+minecraft>double_plant^11.foliage=brush
+minecraft>double_plant^12.foliage=brush
+minecraft>double_plant^13.foliage=brush
+minecraft>double_plant^14.foliage=brush
+minecraft>double_plant^15.foliage=brush
