Mixed up acacia blockmap

--- a/pf-packs/pf_presence/blockmap.cfg
+++ b/pf-packs/pf_presence/blockmap.cfg
@@ -242,8 +242,8 @@ minecraft>stained_glass=glass
 158=stonemachine
 159=brickstone
 minecraft>stained_glass_pane=glass
-minecraft>leaves2=wood
-minecraft>acacia_stairs=leaves
+minecraft>leaves2=leaves
+minecraft>acacia_stairs=wood
 minecraft>dark_oak_stairs=wood
 170=leaves
 171=rug
