Updated blockmap to use string names

--- a/pf-packs/pf_presence/blockmap.cfg
+++ b/pf-packs/pf_presence/blockmap.cfg
@@ -1,269 +1,269 @@
-0=NOT_EMITTER
-1=stone
-2=grass
-3=dirt
-4=stone
-5=wood
-6=NOT_EMITTER
-6.messy=MESSY_GROUND
-6.foliage=straw
-7=bedrock
-8=NOT_EMITTER
-9=NOT_EMITTER
-10=NOT_EMITTER
-11=NOT_EMITTER
-12=sand
-13=gravel
-14=ore
-15=ore
-16=ore
-17=wood
-18=leaves
-19=mud
-20=glass
-21=ore
-22=composite
-23=stonemachine
-24=sandstone
-25=woodutility
-26=rug
-27=NOT_EMITTER
-27.foliage=rails
-28=NOT_EMITTER
-28.foliage=rails
-29=stonemachine
-29^1=wood_sticky
-30=NOT_EMITTER
-31=NOT_EMITTER
-31.messy=MESSY_GROUND
-31^0.foliage=straw
-31^1.foliage=brush
-31^2.foliage=brush
-32.messy=MESSY_GROUND
-32=NOT_EMITTER
-32.foliage=straw
-33=stonemachine
-33^1=wood
-34=wood
-34^9=wood_sticky
-35=rug
-36=NOT_EMITTER
-37=NOT_EMITTER
-38=NOT_EMITTER
-39=NOT_EMITTER
-40=NOT_EMITTER
-41=hardmetal
-42=hardmetal
-43=stone
-43^0=brickstone
-43^1=sandstone
-43^2=wood
-43^3=stone
-43^4=brickstone
-43^5=brickstone
-43^6=brickstone
-43^7=marble
-43^8=brickstone
-43^9=sandstone
-43^15=marble
-44=stone
-44^0=brickstone
-44^1=sandstone
-44^2=wood
-44^3=stone
-44^4=brickstone
-44^5=brickstone
-44^6=brickstone
-44^7=marble
-44^8=brickstone
-44^9=sandstone
-44^10=wood
-44^11=stone
-44^12=brickstone
-44^13=brickstone
-44^14=brickstone
-44^15=marble
-45=brickstone
-46=equipment
-47=wood
-48=stone
-49=obsidian
-50=NOT_EMITTER
-51=NOT_EMITTER
-51.foliage=fire
-52=metalbar
-53=wood
-54=squeakywood
-55=NOT_EMITTER
-56=ore
-57=composite
-58=wood
-59=NOT_EMITTER
-59.messy=MESSY_GROUND
-59^0.foliage=NOT_EMITTER
-59^1.foliage=NOT_EMITTER
-59^2.foliage=brush
-59^3.foliage=brush
-59^4.foliage=brush_straw_transition
-59^5.foliage=brush_straw_transition
-59^6.foliage=straw
-59^7.foliage=straw
-60=dirt
-61=stonemachine
-62=stonemachine
-63=NOT_EMITTER
-64=bluntwood
-#65=ladder #DISABLED: Use default (re-scripted) ladder sound
-65=ladder_default
-66=NOT_EMITTER
-66.foliage=rails
-67=stone
-68=NOT_EMITTER
-69=NOT_EMITTER
-70=NOT_EMITTER
-70.carpet=stone
-71=metalsubparts
-72=NOT_EMITTER
-72.carpet=wood
-73=ore
-74=ore
-75=NOT_EMITTER
-76=NOT_EMITTER
-77=NOT_EMITTER
-78=snow
-78.carpet=snow
-79=ice
-80=snow
-81=grass
-82=sandstone
-83=NOT_EMITTER
-83.messy=MESSY_GROUND
-83.foliage=straw
-84=woodutility
-85=bluntwood
-86=organic_solid
-87=stone
-88=quicksand
-89=glowstone
-90=NOT_EMITTER
-91=organic_solid
-92=organic
-93=stoneutility
-94=stoneutility
-minecraft>stained_glass=glass
-96=bluntwood
-97^0=stone
-97^1=stone
-97^2=brickstone
-98=brickstone
-99=organic
-100=organic
-101=metalbar
-102=glass
-103=organic
-104=NOT_EMITTER
-105=NOT_EMITTER
-106=leaves
-106.foliage=leaves
-107=bluntwood
-108=brickstone
-109=brickstone
-110=grass
-111=waterfine
-111.carpet=waterfine
-112=brickstone
-113=brickstone
-114=brickstone
-115=NOT_EMITTER
-115.foliage=organic
-116=stoneutility
-117=metalbar
-118=metalbar
-119=NOT_EMITTER
-120=stoneutility
-121=stone
-122=obsidian
-123=stoneutility
-124=stoneutility
-125=wood
-126=wood
-127=organic_dry
-128=sandstone
-129=ore
-130=obsidian
-131=NOT_EMITTER
-132=NOT_EMITTER
-133=composite
-134=wood
-135=wood
-136=wood
-137=stoneutility
-138=glass
-139=stone
-140=brickstone
-141=NOT_EMITTER
-141.messy=MESSY_GROUND
-141^0.foliage=NOT_EMITTER
-141^1.foliage=NOT_EMITTER
-141^2.foliage=NOT_EMITTER
-141^3.foliage=NOT_EMITTER
-141^4.foliage=brush
-141^5.foliage=brush
-141^6.foliage=brush
-141^7.foliage=brush
-142=NOT_EMITTER
-142.messy=MESSY_GROUND
-142^0.foliage=NOT_EMITTER
-142^1.foliage=NOT_EMITTER
-142^2.foliage=NOT_EMITTER
-142^3.foliage=NOT_EMITTER
-142^4.foliage=brush
-142^5.foliage=brush
-142^6.foliage=brush
-142^7.foliage=brush
-143=NOT_EMITTER
-144=organic
-145=metalcompressed,hardmetal
-146=squeakywood
-147=NOT_EMITTER
-147.carpet=hardmetal
-148=NOT_EMITTER
-148.carpet=hardmetal
-149=stoneutility
-150=stoneutility
-151=stoneutility,glass
-152=composite
-153=ore
-154=metalbar
-155=marble
-156=marble
-157=NOT_EMITTER
-157.foliage=rails
-158=stonemachine
-159=brickstone
-minecraft>stained_glass_pane=glass
-minecraft>leaves2=leaves
-minecraft>acacia_stairs=wood
-minecraft>dark_oak_stairs=wood
-170=leaves
-171=rug
-171.carpet=rug
-172=brickstone
-173=stone
-minecraft>packed_ice=ice
-minecraft>double_plant=NOT_EMITTER
-minecraft>double_plant.messy=MESSY_GROUND
-minecraft>double_plant^0.foliage=brush
-minecraft>double_plant^1.foliage=brush_straw_transition
-minecraft>double_plant^2.foliage=brush
-minecraft>double_plant^3.foliage=brush_straw_transition
-minecraft>double_plant^4.foliage=brush_straw_transition
-minecraft>double_plant^5.foliage=brush_straw_transition
-minecraft>double_plant^8.foliage=brush
-minecraft>double_plant^9.foliage=brush
-minecraft>double_plant^10.foliage=brush
-minecraft>double_plant^11.foliage=brush
-minecraft>double_plant^12.foliage=brush
-minecraft>double_plant^13.foliage=brush
-minecraft>double_plant^14.foliage=brush
-minecraft>double_plant^15.foliage=brush
+minecraft>air			 = NOT_EMITTER
+minecraft>stone			 = stone
+minecraft>grass			 = grass
+minecraft>dirt			 = dirt
+minecraft>cobblestone	 = stone
+minecraft>planks		 = wood
+minecraft>sapling		 = NOT_EMITTER
+minecraft>sapling.messy	 = MESSY_GROUND
+minecraft>sapling.foliage	 = straw
+minecraft>bedrock			 = bedrock
+minecraft>flowing_water		 = NOT_EMITTER
+minecraft>water				 = NOT_EMITTER
+minecraft>flowing_lava		 = NOT_EMITTER
+minecraft>lava			 = NOT_EMITTER
+minecraft>sand			 = sand
+minecraft>gravel		 = gravel
+minecraft>gold_ore		 = ore
+minecraft>iron_ore		 = ore
+minecraft>coal_ore		 = ore
+minecraft>log			 = wood
+minecraft>leaves		 = leaves
+minecraft>sponge		 = mud
+minecraft>glass			 = glass
+minecraft>lapis_ore		 = ore
+minecraft>lapis_block	 = composite
+minecraft>dispenser		 = stonemachine
+minecraft>sandstone		 = sandstone
+minecraft>noteblock		 = woodutility
+minecraft>bed			 = rug
+minecraft>golden_rail			 = NOT_EMITTER
+minecraft>golden_rail.foliage	 = rails
+minecraft>detector_rail			 = NOT_EMITTER
+minecraft>detector_rail.foliage	 = rails
+minecraft>sticky_piston			 = stonemachine
+minecraft>sticky_piston^1		 = wood_sticky
+minecraft>web					 = NOT_EMITTER
+minecraft>tallgrass				 = NOT_EMITTER
+minecraft>tallgrass.messy		 = MESSY_GROUND
+minecraft>tallgrass^0.foliage	 = straw
+minecraft>tallgrass^1.foliage	 = brush
+minecraft>tallgrass^2.foliage	 = brush
+minecraft>deadbush.messy		 = MESSY_GROUND
+minecraft>deadbush				 = NOT_EMITTER
+minecraft>deadbush.foliage		 = straw
+minecraft>piston				 = stonemachine
+minecraft>piston^1				 = wood
+minecraft>piston_head			 = wood
+minecraft>piston_head^9			 = wood_sticky
+minecraft>wool					 = rug
+minecraft>piston_extension		 = NOT_EMITTER
+minecraft>yellow_flower			 = NOT_EMITTER
+minecraft>red_flower			 = NOT_EMITTER
+minecraft>brown_mushroom		 = NOT_EMITTER
+minecraft>red_mushroom			 = NOT_EMITTER
+minecraft>gold_block			 = hardmetal
+minecraft>iron_block			 = hardmetal
+minecraft>double_stone_slab		 = stone
+minecraft>double_stone_slab^0	 = brickstone
+minecraft>double_stone_slab^1	 = sandstone
+minecraft>double_stone_slab^2	 = wood
+minecraft>double_stone_slab^3	 = stone
+minecraft>double_stone_slab^4	 = brickstone
+minecraft>double_stone_slab^5	 = brickstone
+minecraft>double_stone_slab^6	 = brickstone
+minecraft>double_stone_slab^7	 = marble
+minecraft>double_stone_slab^8	 = brickstone
+minecraft>double_stone_slab^9	 = sandstone
+minecraft>double_stone_slab^15	 = marble
+minecraft>stone_slab		 = stone
+minecraft>stone_slab^0		 = brickstone
+minecraft>stone_slab^1		 = sandstone
+minecraft>stone_slab^2		 = wood
+minecraft>stone_slab^3		 = stone
+minecraft>stone_slab^4		 = brickstone
+minecraft>stone_slab^5		 = brickstone
+minecraft>stone_slab^6		 = brickstone
+minecraft>stone_slab^7		 = marble
+minecraft>stone_slab^8		 = brickstone
+minecraft>stone_slab^9		 = sandstone
+minecraft>stone_slab^10		 = wood
+minecraft>stone_slab^11		 = stone
+minecraft>stone_slab^12		 = brickstone
+minecraft>stone_slab^13		 = brickstone
+minecraft>stone_slab^14		 = brickstone
+minecraft>stone_slab^15		 = marble
+minecraft>brick_block		 = brickstone
+minecraft>tnt				 = equipment
+minecraft>bookshelf			 = wood
+minecraft>mossy_cobblestone	 = stone
+minecraft>obsidian			 = obsidian
+minecraft>torch				 = NOT_EMITTER
+minecraft>fire				 = NOT_EMITTER
+minecraft>fire.foliage		 = fire
+minecraft>mob_spawner		 = metalbar
+minecraft>oak_stairs		 = wood
+minecraft>chest				 = squeakywood
+minecraft>redstone_wire		 = NOT_EMITTER
+minecraft>diamond_ore		 = ore
+minecraft>diamond_block		 = composite
+minecraft>crafting_table	 = wood
+minecraft>wheat				 = NOT_EMITTER
+minecraft>wheat.messy		 = MESSY_GROUND
+minecraft>wheat^0.foliage	 = NOT_EMITTER
+minecraft>wheat^1.foliage	 = NOT_EMITTER
+minecraft>wheat^2.foliage	 = brush
+minecraft>wheat^3.foliage	 = brush
+minecraft>wheat^4.foliage	 = brush_straw_transition
+minecraft>wheat^5.foliage	 = brush_straw_transition
+minecraft>wheat^6.foliage	 = straw
+minecraft>wheat^7.foliage	 = straw
+minecraft>farmland			 = dirt
+minecraft>furnace			 = stonemachine
+minecraft>lit_furnace		 = stonemachine
+minecraft>standing_sign		 = NOT_EMITTER
+minecraft>wooden_door		 = bluntwood
+#65			 = ladder #DISABLED: Use default (re-scripted) ladder sound
+minecraft>ladder			 = ladder_default
+minecraft>rail				 = NOT_EMITTER
+minecraft>rail.foliage		 = rails
+minecraft>stone_stairs		 = stone
+minecraft>wall_sign			 = NOT_EMITTER
+minecraft>lever				 = NOT_EMITTER
+minecraft>stone_pressure_plate			 = NOT_EMITTER
+minecraft>stone_pressure_plate.carpet	 = stone
+minecraft>iron_door						 = metalsubparts
+minecraft>wooden_pressure_plate			 = NOT_EMITTER
+minecraft>wooden_pressure_plate.carpet	 = wood
+minecraft>redstone_ore			 = ore
+minecraft>lit_redstone_ore		 = ore
+minecraft>unlit_redstone_torch	 = NOT_EMITTER
+minecraft>redstone_torch		 = NOT_EMITTER
+minecraft>stone_button			 = NOT_EMITTER
+minecraft>snow_layer			 = snow
+minecraft>snow_layer.carpet		 = snow
+minecraft>ice			 = ice
+minecraft>snow			 = snow
+minecraft>cactus		 = grass
+minecraft>clay			 = sandstone
+minecraft>reeds			 = NOT_EMITTER
+minecraft>reeds.messy	 = MESSY_GROUND
+minecraft>reeds.foliage	 = straw
+minecraft>jukebox		 = woodutility
+minecraft>fence			 = bluntwood
+minecraft>pumpkin		 = organic_solid
+minecraft>netherrack	 = stone
+minecraft>soul_sand		 = quicksand
+minecraft>glowstone		 = glowstone
+minecraft>portal		 = NOT_EMITTER
+minecraft>lit_pumpkin	 = organic_solid
+minecraft>cake			 = organic
+minecraft>unpowered_repeater	 = stoneutility
+minecraft>powered_repeater		 = stoneutility
+minecraft>stained_glass			 = glass
+minecraft>trapdoor				 = bluntwood
+minecraft>monster_egg^0			 = stone
+minecraft>monster_egg^1			 = stone
+minecraft>monster_egg^2			 = brickstone
+minecraft>stonebrick			 = brickstone
+minecraft>brown_mushroom_block	 = organic
+minecraft>red_mushroom_block	 = organic
+minecraft>iron_bars			 = metalbar
+minecraft>glass_pane		 = glass
+minecraft>melon_block		 = organic
+minecraft>pumpkin_stem		 = NOT_EMITTER
+minecraft>melon_stem		 = NOT_EMITTER
+minecraft>vine				 = leaves
+minecraft>vine.foliage		 = leaves
+minecraft>fence_gate		 = bluntwood
+minecraft>brick_stairs		 = brickstone
+minecraft>stone_brick_stairs	 = brickstone
+minecraft>mycelium				 = grass
+minecraft>waterlily				 = waterfine
+minecraft>waterlily.carpet		 = waterfine
+minecraft>nether_brick			 = brickstone
+minecraft>nether_brick_fence	 = brickstone
+minecraft>nether_brick_stairs	 = brickstone
+minecraft>nether_wart			 = NOT_EMITTER
+minecraft>nether_wart.foliage	 = organic
+minecraft>enchanting_table		 = stoneutility
+minecraft>brewing_stand			 = metalbar
+minecraft>cauldron				 = metalbar
+minecraft>end_portal			 = NOT_EMITTER
+minecraft>end_portal_frame		 = stoneutility
+minecraft>end_stone				 = stone
+minecraft>dragon_egg			 = obsidian
+minecraft>redstone_lamp			 = stoneutility
+minecraft>lit_redstone_lamp		 = stoneutility
+minecraft>double_wooden_slab	 = wood
+minecraft>wooden_slab			 = wood
+minecraft>cocoa					 = organic_dry
+minecraft>sandstone_stairs		 = sandstone
+minecraft>emerald_ore			 = ore
+minecraft>ender_chest			 = obsidian
+minecraft>tripwire_hook			 = NOT_EMITTER
+minecraft>tripwire				 = NOT_EMITTER
+minecraft>emerald_block			 = composite
+minecraft>spruce_stairs			 = wood
+minecraft>birch_stairs			 = wood
+minecraft>jungle_stairs			 = wood
+minecraft>command_block			 = stoneutility
+minecraft>beacon				 = glass
+minecraft>cobblestone_wall		 = stone
+minecraft>flower_pot			 = brickstone
+minecraft>carrots				 = NOT_EMITTER
+minecraft>carrots.messy			 = MESSY_GROUND
+minecraft>carrots^0.foliage		 = NOT_EMITTER
+minecraft>carrots^1.foliage		 = NOT_EMITTER
+minecraft>carrots^2.foliage		 = NOT_EMITTER
+minecraft>carrots^3.foliage		 = NOT_EMITTER
+minecraft>carrots^4.foliage		 = brush
+minecraft>carrots^5.foliage		 = brush
+minecraft>carrots^6.foliage		 = brush
+minecraft>carrots^7.foliage		 = brush
+minecraft>potatoes				 = NOT_EMITTER
+minecraft>potatoes.messy		 = MESSY_GROUND
+minecraft>potatoes^0.foliage	 = NOT_EMITTER
+minecraft>potatoes^1.foliage	 = NOT_EMITTER
+minecraft>potatoes^2.foliage	 = NOT_EMITTER
+minecraft>potatoes^3.foliage	 = NOT_EMITTER
+minecraft>potatoes^4.foliage	 = brush
+minecraft>potatoes^5.foliage	 = brush
+minecraft>potatoes^6.foliage	 = brush
+minecraft>potatoes^7.foliage	 = brush
+minecraft>wooden_button			 = NOT_EMITTER
+minecraft>skull					 = organic
+minecraft>anvil					 = metalcompressed,hardmetal
+minecraft>trapped_chest			 = squeakywood
+minecraft>light_weighted_pressure_plate			 = NOT_EMITTER
+minecraft>light_weighted_pressure_plate.carpet	 = hardmetal
+minecraft>heavy_weighted_pressure_plate			 = NOT_EMITTER
+minecraft>heavy_weighted_pressure_plate.carpet	 = hardmetal
+minecraft>unpowered_comparator		 = stoneutility
+minecraft>powered_comparator		 = stoneutility
+minecraft>daylight_detector			 = stoneutility,glass
+minecraft>redstone_block			 = composite
+minecraft>quartz_ore				 = ore
+minecraft>hopper					 = metalbar
+minecraft>quartz_block				 = marble
+minecraft>quartz_stairs				 = marble
+minecraft>activator_rail			 = NOT_EMITTER
+minecraft>activator_rail.foliage	 = rails
+minecraft>dropper					 = stonemachine
+minecraft>stained_hardened_clay		 = brickstone
+minecraft>stained_glass_pane		 = glass
+minecraft>leaves2			 = leaves
+minecraft>acacia_stairs		 = wood
+minecraft>dark_oak_stairs	 = wood
+minecraft>hay_block			 = leaves
+minecraft>carpet			 = rug
+minecraft>carpet.carpet		 = rug
+minecraft>hardened_clay		 = brickstone
+minecraft>coal_block		 = stone
+minecraft>packed_ice		 = ice
+minecraft>double_plant		 = NOT_EMITTER
+minecraft>double_plant.messy		 = MESSY_GROUND
+minecraft>double_plant^0.foliage	 = brush
+minecraft>double_plant^1.foliage	 = brush_straw_transition
+minecraft>double_plant^2.foliage	 = brush
+minecraft>double_plant^3.foliage	 = brush_straw_transition
+minecraft>double_plant^4.foliage	 = brush_straw_transition
+minecraft>double_plant^5.foliage	 = brush_straw_transition
+minecraft>double_plant^8.foliage	 = brush
+minecraft>double_plant^9.foliage	 = brush
+minecraft>double_plant^10.foliage	 = brush
+minecraft>double_plant^11.foliage	 = brush
+minecraft>double_plant^12.foliage	 = brush
+minecraft>double_plant^13.foliage	 = brush
+minecraft>double_plant^14.foliage	 = brush
+minecraft>double_plant^15.foliage	 = brush
