Dirty way to fix sounds not playing on pressure plates, fixes #4

--- a/pf-packs/pf_presence/blockmap.cfg
+++ b/pf-packs/pf_presence/blockmap.cfg
@@ -120,10 +120,10 @@ minecraft>rail.foliage		 = rails
 minecraft>stone_stairs		 = stone
 minecraft>wall_sign			 = NOT_EMITTER
 minecraft>lever				 = NOT_EMITTER
-minecraft>stone_pressure_plate			 = NOT_EMITTER
+minecraft>stone_pressure_plate			 = stone
 minecraft>stone_pressure_plate.carpet	 = stone
 minecraft>iron_door						 = metalsubparts
-minecraft>wooden_pressure_plate			 = NOT_EMITTER
+minecraft>wooden_pressure_plate			 = wood
 minecraft>wooden_pressure_plate.carpet	 = wood
 minecraft>redstone_ore			 = ore
 minecraft>lit_redstone_ore		 = ore
