Ditto on metal pressure plates, fixes #4

--- a/pf-packs/pf_presence/blockmap.cfg
+++ b/pf-packs/pf_presence/blockmap.cfg
@@ -225,9 +225,9 @@ minecraft>wooden_button			 = NOT_EMITTER
 minecraft>skull					 = organic
 minecraft>anvil					 = metalcompressed,hardmetal
 minecraft>trapped_chest			 = squeakywood
-minecraft>light_weighted_pressure_plate			 = NOT_EMITTER
+minecraft>light_weighted_pressure_plate			 = hardmetal
 minecraft>light_weighted_pressure_plate.carpet	 = hardmetal
-minecraft>heavy_weighted_pressure_plate			 = NOT_EMITTER
+minecraft>heavy_weighted_pressure_plate			 = hardmetal
 minecraft>heavy_weighted_pressure_plate.carpet	 = hardmetal
 minecraft>unpowered_comparator		 = stoneutility
 minecraft>powered_comparator		 = stoneutility
