Packed ice now produces the sound of stone and snow, instead of weak ice

--- a/pf-packs/pf_presence/blockmap.cfg
+++ b/pf-packs/pf_presence/blockmap.cfg
@@ -250,7 +250,7 @@ minecraft>carpet			 = rug
 minecraft>carpet.carpet		 = rug
 minecraft>hardened_clay		 = brickstone
 minecraft>coal_block		 = stone
-minecraft>packed_ice		 = ice
+minecraft>packed_ice		 = stone,snow
 minecraft>double_plant		 = NOT_EMITTER
 minecraft>double_plant.messy		 = MESSY_GROUND
 minecraft>double_plant^0.foliage	 = brush
