* Updated the default blockmaps.cfg

--- a/pf-packs/pf_presence/blockmap.cfg
+++ b/pf-packs/pf_presence/blockmap.cfg
@@ -1,3 +1,4 @@
+minecraft>barrier		 = NOT_EMITTER
 minecraft>air			 = NOT_EMITTER
 minecraft>stone			 = stone
 minecraft>grass			 = grass
@@ -18,6 +19,7 @@ minecraft>gold_ore		 = ore
 minecraft>iron_ore		 = ore
 minecraft>coal_ore		 = ore
 minecraft>log			 = wood
+minecraft>log2			 = wood
 minecraft>leaves		 = leaves
 minecraft>sponge		 = mud
 minecraft>glass			 = glass
@@ -25,6 +27,7 @@ minecraft>lapis_ore		 = ore
 minecraft>lapis_block	 = composite
 minecraft>dispenser		 = stonemachine
 minecraft>sandstone		 = sandstone
+minecraft>red_sandstone	 = sandstone
 minecraft>noteblock		 = woodutility
 minecraft>bed			 = rug
 minecraft>golden_rail			 = NOT_EMITTER
@@ -66,6 +69,9 @@ minecraft>double_stone_slab^7	 = marble
 minecraft>double_stone_slab^8	 = brickstone
 minecraft>double_stone_slab^9	 = sandstone
 minecraft>double_stone_slab^15	 = marble
+minecraft>double_stone_slab2	 = stone
+minecraft>double_stone_slab2^0	 = sandstone
+minecraft>double_stone_slab2^8	 = sandstone
 minecraft>stone_slab		 = stone
 minecraft>stone_slab^0		 = brickstone
 minecraft>stone_slab^1		 = sandstone
@@ -83,6 +89,9 @@ minecraft>stone_slab^12		 = brickstone
 minecraft>stone_slab^13		 = brickstone
 minecraft>stone_slab^14		 = brickstone
 minecraft>stone_slab^15		 = marble
+minecraft>stone_slab2		 = stone
+minecraft>stone_slab2^0		 = sandstone
+minecraft>stone_slab2^8		 = sandstone
 minecraft>brick_block		 = brickstone
 minecraft>tnt				 = equipment
 minecraft>bookshelf			 = wood
@@ -113,6 +122,11 @@ minecraft>furnace			 = stonemachine
 minecraft>lit_furnace		 = stonemachine
 minecraft>standing_sign		 = NOT_EMITTER
 minecraft>wooden_door		 = bluntwood
+minecraft>acacia_door		 = bluntwood
+minecraft>dark_oak_door		 = bluntwood
+minecraft>birch_door		 = bluntwood
+minecraft>jungle_door		 = bluntwood
+minecraft>spruce_door		 = bluntwood
 #65			 = ladder #DISABLED: Use default (re-scripted) ladder sound
 minecraft>ladder			 = ladder_default
 minecraft>rail				 = NOT_EMITTER
@@ -123,6 +137,7 @@ minecraft>lever				 = NOT_EMITTER
 minecraft>stone_pressure_plate			 = stone
 minecraft>stone_pressure_plate.carpet	 = stone
 minecraft>iron_door						 = metalsubparts
+minecraft>iron_trapdoor					 = metalsubparts
 minecraft>wooden_pressure_plate			 = wood
 minecraft>wooden_pressure_plate.carpet	 = wood
 minecraft>redstone_ore			 = ore
@@ -136,11 +151,17 @@ minecraft>ice			 = ice
 minecraft>snow			 = snow
 minecraft>cactus		 = grass
 minecraft>clay			 = sandstone
+minecraft>hardened_clay	 = sandstone
 minecraft>reeds			 = NOT_EMITTER
 minecraft>reeds.messy	 = MESSY_GROUND
 minecraft>reeds.foliage	 = straw
 minecraft>jukebox		 = woodutility
-minecraft>fence			 = bluntwood
+minecraft>fence.bigger			 = bluntwood
+minecraft>acacia_fence.bigger	 = bluntwood
+minecraft>dark_oak_fence.bigger	 = bluntwood
+minecraft>birch_fence.bigger	 = bluntwood
+minecraft>jungle_fence.bigger	 = bluntwood
+minecraft>spruce_fence.bigger	 = bluntwood
 minecraft>pumpkin		 = organic_solid
 minecraft>netherrack	 = stone
 minecraft>soul_sand		 = quicksand
@@ -165,15 +186,20 @@ minecraft>pumpkin_stem		 = NOT_EMITTER
 minecraft>melon_stem		 = NOT_EMITTER
 minecraft>vine				 = leaves
 minecraft>vine.foliage		 = leaves
-minecraft>fence_gate		 = bluntwood
+minecraft>fence_gate.bigger			 = bluntwood
+minecraft>acacia_fence_gate.bigger	 = bluntwood
+minecraft>dark_oak_fence_gate.bigger = bluntwood
+minecraft>birch_fence_gate.bigger	 = bluntwood
+minecraft>jungle_fence_gate.bigger	 = bluntwood
+minecraft>spruce_fence_gate.bigger	 = bluntwood
 minecraft>brick_stairs		 = brickstone
 minecraft>stone_brick_stairs	 = brickstone
 minecraft>mycelium				 = grass
 minecraft>waterlily				 = waterfine
 minecraft>waterlily.carpet		 = waterfine
-minecraft>nether_brick			 = brickstone
-minecraft>nether_brick_fence	 = brickstone
-minecraft>nether_brick_stairs	 = brickstone
+minecraft>nether_brick				 = brickstone
+minecraft>nether_brick_fence.bigger	 = brickstone
+minecraft>nether_brick_stairs		 = brickstone
 minecraft>nether_wart			 = NOT_EMITTER
 minecraft>nether_wart.foliage	 = organic
 minecraft>enchanting_table		 = stoneutility
@@ -185,10 +211,12 @@ minecraft>end_stone				 = stone
 minecraft>dragon_egg			 = obsidian
 minecraft>redstone_lamp			 = stoneutility
 minecraft>lit_redstone_lamp		 = stoneutility
+minecraft>sea_lantern			 = stoneutility
 minecraft>double_wooden_slab	 = wood
 minecraft>wooden_slab			 = wood
 minecraft>cocoa					 = organic_dry
 minecraft>sandstone_stairs		 = sandstone
+minecraft>red_sandstone_stairs	 = sandstone
 minecraft>emerald_ore			 = ore
 minecraft>ender_chest			 = obsidian
 minecraft>tripwire_hook			 = NOT_EMITTER
@@ -199,7 +227,7 @@ minecraft>birch_stairs			 = wood
 minecraft>jungle_stairs			 = wood
 minecraft>command_block			 = stoneutility
 minecraft>beacon				 = glass
-minecraft>cobblestone_wall		 = stone
+minecraft>cobblestone_wall.bigger		 = stone
 minecraft>flower_pot			 = brickstone
 minecraft>carrots				 = NOT_EMITTER
 minecraft>carrots.messy			 = MESSY_GROUND
@@ -232,6 +260,7 @@ minecraft>heavy_weighted_pressure_plate.carpet	 = hardmetal
 minecraft>unpowered_comparator		 = stoneutility
 minecraft>powered_comparator		 = stoneutility
 minecraft>daylight_detector			 = stoneutility,glass
+minecraft>daylight_detector_inverted = stoneutility,glass
 minecraft>redstone_block			 = composite
 minecraft>quartz_ore				 = ore
 minecraft>hopper					 = metalbar
@@ -267,3 +296,7 @@ minecraft>double_plant^12.foliage	 = brush
 minecraft>double_plant^13.foliage	 = brush
 minecraft>double_plant^14.foliage	 = brush
 minecraft>double_plant^15.foliage	 = brush
+#minecraft>slime				 = slime #Using the default sound
+minecraft>prismarine		 = stone
+minecraft>standing_banner.foliage	 = rug,straw,squeakywood
+minecraft>wall_banner		 = rug,straw
