+ Added support for localisations * Fixed associations for banners + Annotated the variator example

--- a/pf-packs/pf_presence/blockmap.cfg
+++ b/pf-packs/pf_presence/blockmap.cfg
@@ -298,5 +298,6 @@ minecraft>double_plant^14.foliage	 = brush
 minecraft>double_plant^15.foliage	 = brush
 #minecraft>slime				 = slime #Using the default sound
 minecraft>prismarine		 = stone
+minecraft>standing_banner			 = rug,straw,squeakywood
 minecraft>standing_banner.foliage	 = rug,straw,squeakywood
 minecraft>wall_banner		 = rug,straw
