Updated resourcepack components and variator example.

--- a/pf-packs/pf_presence/variator_EXAMPLE.cfg
+++ b/pf-packs/pf_presence/variator_EXAMPLE.cfg
@@ -14,8 +14,40 @@ SPEED_TO_RUN=0.022
 #Normal stride for humans
 DISTANCE_HUMAN=0.95
 #Stride when walking on stairs
-distance_stair=0.6175
+DISTANCE_STAIR=0.6175
 #Stride when walking on ladders
 DISTANCE_LADDER=0.5
 #True if PF should play 'wandering' sounds
 PLAY_WANDER=true
+
+#Maximum distance the player can fall and still play wing folding sounds
+HUGEFALL_LANDING_DISTANCE_MAX=12
+#Minimum distance the player must fall in order to play wing folding sounds
+HUGEFALL_LANDING_DISTANCE_MIN=3
+
+#Minimum horizontal flight velocity before the player starts dashing
+MIN_DASH_MOTION=0.8
+#Minimum horizontal flight velocity before the player starts coasting
+MIN_COAST_MOTION=0.4
+#Minimum horizontal velocity for general flying. Also used when taking off
+MIN_MOTION_HOR=0.2
+#Minimum vertical flight velocity that a player is considered to be ascending
+MIN_MOTION_Y=0.2
+
+#Ticks buffer used when the player's flight state changes
+FLIGHT_TRANSITION_TIME=200
+#Wing flap rate when dashing. (smaller is faster)
+WING_SPEED_RAPID=300
+#Wing flap rate during normal flight. (smaller is faster)
+WING_SPEED_NORMAL=500
+#Wing flap rate when hovering. (smaller is faster)
+WING_SPEED_IDLE=900
+#Wing flap rate whilst coasting. Will alternate between this and the normal rate. (smaller is faster)
+WING_SPEED_COAST=2000
+
+#Number of ticks taken to transition to no sound when the player stops moving.
+WING_IMMOBILE_FADE_DURATION=20000
+#Number of ticks before wing sounds start to fade after the player stops moving.
+WING_IMMOBILE_FADE_START=20000
+#Number of ticks between when the player takes off and flapping can begin.
+WING_JUMPING_REST_TIME=700
