--- a/pf-packs/pf_presence/blockmap.cfg
+++ b/pf-packs/pf_presence/blockmap.cfg
@@ -150,7 +150,7 @@ minecraft>snow_layer.carpet		 = snow
 minecraft>ice			 = ice
 minecraft>snow			 = snow
 minecraft>cactus		 = grass
-minecraft>clay			 = sandstone
+minecraft>clay			 = dirt
 minecraft>hardened_clay	 = sandstone
 minecraft>reeds			 = NOT_EMITTER
 minecraft>reeds.messy	 = MESSY_GROUND
@@ -298,6 +298,6 @@ minecraft>double_plant^14.foliage	 = brush
 minecraft>double_plant^15.foliage	 = brush
 #minecraft>slime				 = slime #Using the default sound
 minecraft>prismarine		 = stone
-minecraft>standing_banner			 = rug,straw,squeakywood
+minecraft>standing_banner		 = rug,straw,squeakywood
 minecraft>standing_banner.foliage	 = rug,straw,squeakywood
 minecraft>wall_banner		 = rug,straw
