--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,15 @@
-name=PresenceFootsteps
+modid=presencefootsteps
+name=Presence Footsteps
 inceptionYear=2012
 packaging=jar
+author=Hurricaaane (Ha3), Sollace
 description=An overly complicated sound mod
 url=http://presencefootsteps.ha3.eu
 organization=
 buildType=SNAPSHOT
-buildVersion=1.10.2
-mcVersion=1.10.2
-mcMappings=snapshot_20160623
+buildVersion=u13
+buildRevision=0
+mcVersion=1.12.2
+mcMappings=stable_39
+forgeGradleVersion=2.3-SNAPSHOT
+mixinGradleVersion=0.6-SNAPSHOT
