--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,15 @@
-
-.gradle
-jars
-build
-bin
-
-.project
+.gradle/
+.settings/
+bin/
+build/
+run/
 .classpath
-.settings
+.project
 *.launch
-
-dummy
-minelp_dummy
+/.apt_generated/
+.factorypath
+logs/
+.idea/
+*.iml
+classes/
+out/
