--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,20 @@
-modid=presencefootsteps
-name=Presence Footsteps
-inceptionYear=2012
-packaging=jar
-author=Hurricaaane (Ha3), Sollace
-description=An overly complicated sound mod
-url=http://presencefootsteps.ha3.eu
-organization=
-buildType=SNAPSHOT
-buildVersion=u13
-buildRevision=0
-mcVersion=1.12.2
-mcMappings=stable_39
-forgeGradleVersion=2.3-SNAPSHOT
-mixinGradleVersion=0.6-SNAPSHOT
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
+
+# Fabric Properties
+	# check these on https://fabricmc.net/use
+	minecraft_version=1.14.4
+	yarn_mappings=1.14.4+build.2
+	loader_version=0.4.8+
+
+# Mod Properties
+	group=com.presencefootsteps
+	displayname=Presence Footsteps
+	authors=Hurricaaane (Ha3), Sollace
+	description=An overly complicated sound mod
+	url=http://presencefootsteps.ha3.eu
+	version=u14
+	release=SNAPSHOT
+
+# Dependencies
+	fabric_version=0.3.0+
