A whole lot more tidying up

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ org.gradle.daemon=false
 	authors=Hurricaaane (Ha3), Sollace
 	description=An overly complicated sound mod
 	url=http://presencefootsteps.ha3.eu
-	version=u14
+	version=r15
 	release=SNAPSHOT
 
 # Dependencies
