--- a/gradle.properties
+++ b/gradle.properties
@@ -14,9 +14,9 @@ org.gradle.daemon=false
 	description=An overly complicated sound mod
 	url=http://presencefootsteps.ha3.eu
 	version=r15
-	release=SNAPSHOT
+	release=RELEASE
 
 # Dependencies
 	fabric_version=0.3.0+
-	minelp_version=1.14.4-3.3-SNAPSHOT
-	kirin_version=1.14.4-1.4.4-SNAPSHOT
+	minelp_version=1.14.4-3.3-pre8
+	kirin_version=1.14.4-1.4.4
