--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ org.gradle.daemon=false
 	description=An overly complicated sound mod
 	url=http://presencefootsteps.ha3.eu
 	version=r15
-	release=RELEASE
+	release=SNAPSHOT
 
 # Dependencies
 	fabric_version=0.3.0+
